fixing uoe exception for sqllist, reformatting and replacement of static imports