@@ -543,7 +543,7 @@ public class RexLiteral extends RexNode implements Comparable<RexLiteral> {
                 pw.print( value.asInterval().getValue().toString() );
                 break;
             case ARRAY:
-                pw.print( value.asList().stream().map( e -> e == null ? "" : e.toString() ).collect( Collectors.toList() ) );
+                pw.print( value.asList().stream().map( e -> e == null ? "" : e.toString() ).toList() );
                 break;
             case MULTISET:
             case ROW:
