@@ -89,7 +89,7 @@ public class StatisticQueryProcessor {
                 .filter( n -> n.dataModel == DataModel.RELATIONAL )
                 .flatMap( n -> snapshot.rel().getTables( Pattern.of( n.name ), null ).stream().filter( t -> t.entityType != EntityType.VIEW ).flatMap( t -> snapshot.rel().getColumns( t.id ).stream() ) )
                 .map( QueryResult::fromCatalogColumn )
-                .collect( Collectors.toList() );
+                .toList();
     }
 
 
